# kiwi8086

./: CMakeLists.txt  README.md  cputest.asm  graphics.asm  test.asm
include/: 8259pic.h  bios.h  cpu.h  dma.h  fdc.h  keyboard.h  memory.h  pic.h  pit.h  ppi.h  system.h  vga.h
include/cpu/: cpu.h  instructions.h  opcode_desc.h
include/display/: cga.h  crtc.h  display.h  font.h  mda.h
include/ps2/: controller.h  keyboard.h
src/: bios.c  cpu.c  dma.c  fdc.c  keyboard.c  main.c  system.c
src/cpu/: cpu_exec.c  cycle.c  flags.c  instructions.c  modrm.c  process_instruction.c  process_opcode.c  regindex.c  reset.c
src/display/cga/: handle_port.c  palette.c  render.c
src/display/crtc/: handle_port.c
src/mem/: readandwrite.c  segmem.c
src/pic/: checkint.c  handle_port.c
src/pit/: cycle.c  handle_port.c
src/ppi/: handle_port.c
src/ps2/: controller.c  keyboard.c
